# CatMeIfYouCan

./: .env.development  .env.development.database  .env.production  Dockerfile  Dockerfile.production  README.md  docker-compose.production.yml  docker-compose.yml  entrypoint.production.sh  entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
configuration/: settings.py  urls.py
nginx/: nginx.conf
pictures/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
pictures/migrations/: 0001_initial.py
