[tool.poetry]
name = "catmeifyoucan"
version = "0.0.1"
description = "The world's best cat pictures API"
authors = ["Harshit Doshi <5103046+HarshitDoshi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
pillow = "^9.3.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
